[tool.poetry]
name = "cipher_ljt2138"
version = "0.1.0"
description = "Cipher package for hw07"
authors = ["Lash Tan"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
